--- a/src/main/webapp/WEB-INF/static/css/vendor.css
+++ b/src/main/webapp/WEB-INF/static/css/vendor.css
@@ -40,7 +40,7 @@
 }
 #category{
     float:left;
-    width: 130px;
+    width: 200px;
     height: 1200px;
     background-color: #99CCFF;
 }
@@ -52,7 +52,7 @@ ul li{
 }
 #detail{
     float: left;
-    width: 670px;
+    width: 600px;
     height: 1200px;
     background-color: lightgray;
 }
@@ -67,4 +67,8 @@ ul li{
 .nav1:nth-child(5){
     color: #FF3300;
     font-weight: bold;
+}
+
+.name{
+    margin: 10px;
 }
