--- a/src/main/webapp/WEB-INF/static/css/addMfg.css
+++ b/src/main/webapp/WEB-INF/static/css/addMfg.css
@@ -1,11 +1,11 @@
 
-#addPn_box{
+#addMfg_box{
     width:100%;
     margin-top: 40px;
 }
-#addPn{
+#addMfg{
     margin:0 auto;
-    width:1226px;
+    width:1000px;
     height:auto;
     font-size:24px;
 }
@@ -19,19 +19,13 @@ input{
     height:24px;
     margin-top: 20px;
 }
-#findPn{
-    margin:0 auto;
-    width:1226px;
-    height:1000px;
-    margin-top:30px;
-    border-top:2px solid #F30;
-}
+
 #addForm #spec{
     width:500px;
     height:300px;
     margin-top: 20px;
 }
-.pnSave{
+.mfgSave{
     width:100px;
     font-size: 24px;
     cursor: pointer;
@@ -39,7 +33,7 @@ input{
     margin-left:100px;
     margin-bottom: 50px;
 }
-.pnSave:hover{
+.mfgSave:hover{
     color: #FF0000;
 }
 
