--- a/src/main/webapp/WEB-INF/static/css/index.css
+++ b/src/main/webapp/WEB-INF/static/css/index.css
@@ -45,3 +45,43 @@ li{
     color: #FF3300;
     font-weight: bold;
 }
+
+.bannerDiv{
+    width:1000px;
+    height:243px;
+    margin: 0 auto;
+}
+.bannerDiv div{
+    float:left;
+}
+.bannerArrow{
+    width:50px;
+    height:138px;
+}
+.bannerArrow p{
+    width:50px;
+    height:50px;
+    margin-top:100px;
+}
+.bannerArrow p.pleft{
+    background:url("../images/prev.png") no-repeat;
+}
+.bannerArrow p.pright{
+    background:url(../images/next.png) no-repeat;
+    float: right;
+}
+.bannerMiddle{
+    width:1000px;
+    height:243px;
+    margin: 0 auto;
+
+}
+.bannerImage1{
+    background:url(../images/banner1.jpg) no-repeat;
+}
+.bannerImage2{
+    background:url(../images/banner2.jpg) no-repeat;
+}
+.bannerImage3{
+    background:url(../images/banner3.jpg) no-repeat;
+}
