--- a/src/main/webapp/WEB-INF/static/css/admin.css
+++ b/src/main/webapp/WEB-INF/static/css/admin.css
@@ -7,7 +7,7 @@
 }
 #box1{
     margin: 0 auto;
-    width: 1226px;
+    width: 1000px;
     height: 50px;
     background-color: burlywood;
 }
@@ -19,24 +19,31 @@ a:hover{color:#F00;}
 
 #box2{
     margin: auto;
-    width: 1226px;
-    height: 1100px;
+    width: 1000px;
+    height: 1600px;
 }
 #admnav{
     float:left;
-    width: 150px;
-    height: 1000px;
+    width: 100px;
+    height: 1500px;
     background-color: #99CCFF;
 }
 ul{
     list-style:none;
 }
 ul li{
-    padding: 10px 30px;
+    padding: 10px 10px;
 }
 #detail{
     float: left;
-    width: 1070px;
-    height: 1000px;
+    width: 900px;
+    height: 1500px;
     background-color: lightgray;
+}
+
+#detail iframe{
+    display: none;
+    width: 99.5%;
+    height: 1498px;
+    frameborder:0;
 }
