--- a/src/main/webapp/WEB-INF/static/css/findPrice.css
+++ b/src/main/webapp/WEB-INF/static/css/findPrice.css
@@ -65,6 +65,19 @@ ul li{
 
 }
 
+#pageCount1{
+	margin:0 auto;
+	width:1000px;
+	height:60px;
+	background:#9CF;
+}
+#pageCount1 span{
+	width:20px;
+	margin-left:30px;
+	line-height:40px;
+	font-size:16px;
+}
+
 #stkHead{
 	margin:0 auto;
 	width:1000px;
